--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 # http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
 
 [metadata]
-name = gitshoes2
+name = gitshoes
 description = Generates a CSV report on all open issues in a GitHub repository.
 author = Shunsuke Hiratsuka
 author-email = shiratsu2009@gmail.com
@@ -52,7 +52,7 @@ testing =
 [options.entry_points]
 # Add here console scripts like:
 console_scripts =
-    gitshoes2 = gitshoes.reporter:run
+    gitshoes = gitshoes.reporter:run
 # For example:
 # console_scripts =
 #     fibonacci = gitshoes.skeleton:run
@@ -71,7 +71,7 @@ extras = True
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
 addopts =
-    --cov gitshoes2 --cov-report term-missing
+    --cov gitshoes --cov-report term-missing
     --verbose
 norecursedirs =
     dist
@@ -110,6 +110,6 @@ exclude =
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
 version = 3.1
-package = gitshoes2
+package = gitshoes
 extensions =
     markdown
